--- a/src/view/ThanhPhan/KhuyenMaiJpanel.form
+++ b/src/view/ThanhPhan/KhuyenMaiJpanel.form
@@ -542,6 +542,9 @@
               <Properties>
                 <Property name="text" type="java.lang.String" value="Ho&#x1ea1;t &#x111;&#x1ed9;ng"/>
               </Properties>
+              <Events>
+                <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="cbHoatDongActionPerformed"/>
+              </Events>
             </Component>
             <Container class="javax.swing.JScrollPane" name="jScrollPane6">
               <AuxValues>
