--- a/src/view/ThanhPhan/QL_IMEI.form
+++ b/src/view/ThanhPhan/QL_IMEI.form
@@ -165,7 +165,7 @@
             <Property name="buttonGroup" type="javax.swing.ButtonGroup" editor="org.netbeans.modules.form.RADComponent$ButtonGroupPropertyEditor">
               <ComponentRef name="TrangThai"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="C&#xf2;n h&#xe0;ng"/>
+            <Property name="text" type="java.lang.String" value="Ch&#x1b0;a b&#xe1;n"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JRadioButton" name="rdDaBan">
