--- a/src/view/ThanhPhan/SanPhamJpanel.form
+++ b/src/view/ThanhPhan/SanPhamJpanel.form
@@ -364,6 +364,9 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JTextField" name="txtMa">
+              <Properties>
+                <Property name="enabled" type="boolean" value="false"/>
+              </Properties>
             </Component>
             <Component class="javax.swing.JLabel" name="jLabel20">
               <Properties>
